--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/drawer": "^6.6.0",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.14",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "link": "^1.5.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "^0.70.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-toast-message": "^2.1.5",
+    "rn-faded-scrollview": "^1.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
